# OrbitLab

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  GOAL.md  HACKATHON.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  TEAM.md  TODO.md  codecov.yml  docker-compose.yml  install.sh  pyproject.toml
.agents/task-log/: 2026-06-02-animation-push.md  2026-06-02-simulation-upgrade.md  2026-06-03-documentation-refresh.md  2026-06-03-github-full-body.md  2026-06-03-github-repo-organization.md  2026-06-03-github-sync-check.md  2026-06-03-operation-friday-beta.md  2026-06-03-readme-one-piece-reference.md  2026-06-03-science-provenance-release-room.md  2026-06-04-friday-beta-live-rerun.md  2026-06-05-friday-beta-followups.md  2026-06-05-nigraha-norm-stats-40.md  2026-06-08-agents-quality-first.md  2026-06-08-codecov-100-percent.md  2026-06-08-codecov-frontend-coverage.md  2026-06-08-github-dependency-sync.md  2026-06-10-recent-science-followup-push.md  2026-06-10-science-completion-audit.md  2026-06-10-scientific-accuracy-mission-execution.md  2026-06-10-scientific-accuracy-mission-plan.md  2026-06-11-first-run-install-popup.md  2026-06-11-fix-modshift-ci-provisioning.md  2026-06-11-nigraha-sweet-prf-sde-execution.md  2026-06-11-recent-ci-failure-investigation.md  2026-06-12-merge-orbit-aaa-visuals.md  2026-06-12-orbit-aaa-visual-upgrade.md  2026-06-12-orbit-scene-performance-audit.md  2026-06-12-push-audit.md  2026-06-14-highest-verbosity-instructions.md  handover-2026-06-11-nigraha-sweet-prf-sde.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  model_artifact.yml  release_provenance.yml  science_result.yml
.github/rulesets/: main.json
.github/workflows/: ci.yml  codeql.yml  release-room.yml
backend/orbitlab/: __init__.py  config.py  exceptions.py  worker.py
backend/tests/: test_accuracy_mission_fixes.py  test_api_endpoints.py  test_astronet_adapter.py  test_bls_periodogram.py  test_data_quality.py  test_dave_vetting.py  test_density_derivation.py  test_final_fixes.py  test_friday_beta_followups.py  test_goal_upgrades.py  test_json_safety.py  test_json_safety_edge_cases.py  test_mast_and_artifacts.py  test_mast_internals.py  test_model_service.py  test_nigraha_integration.py  test_paper_grade_engines.py  test_physics.py  test_pipeline_edge_coverage.py  test_prf_1b_pipeline.py  test_prf_centroid.py  test_recover_nigraha_norm_stats.py  test_release_room.py  test_science_hardening.py  test_sde_calibration.py  test_small_contract_edges.py  test_source_guards.py  test_tce_vetting.py  test_worker.py
docs/: ARCHITECTURE.md  DEMO_TARGETS.md  DEPLOYMENT.md  GITHUB_ORGANIZATION.md  MODEL_CARDS.md  ORBIT_SCENE_PERFORMANCE_AUDIT.md  RELEASE.md  REPO_STRUCTURE.md  SCIENTIFIC_METHODOLOGY.md  SUBMISSION_CHECKLIST.md  USAGE.md  coverage-current-non-test-old-vs-new.diff  coverage-full-100-percent-old-vs-new.diff  goal.md  model_artifacts.md  published_checkpoints.md
docs/api-fixtures/: analysis-result.json  bls-preview.json  demo-session.json  failed-job.json  models.json  sample-report.json
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: orbitlab-live.spec.ts  orbitlab.spec.ts
frontend/src/: App.test.tsx  App.tsx  (+1 more)
operation-friday-beta/: README.md  api_workflow_runner.py  render_visual_audit.py  targets.json
scripts/: README.md  build_dave_modshift.sh  build_release_room.py  calibrate_sde_thresholds.py  convert_kepler_astronet_npz.py  dump_repo.py  export_evidence_packet.py  fetch_calibration_sources.py  fetch_k2_exomac_kkt.py  fetch_kepler_astronet.py  fetch_nigraha_weights.py  generate_nigraha_golden.py  live_planet_verification.py  predict_kepler_astronet_tf.py  preflight.sh  recover_nigraha_norm_stats.py  register_astronet_artifact.py  run_orbitlab_science_benchmark.py  start_all.sh  train_probability_calibration.py
(+487 files in other folders)
