[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitlab"
version = "0.1.0"
description = "Real-data exoplanet analysis workbench with TPF-first pipelines and pretrained AstroNet inference."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<2.0",
  "pydantic>=2.13.4",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0.49",
  "celery>=5.4",
  "redis>=5.0",
  "psycopg[binary]>=3.2",
]
science = [
  "astropy>=6.1",
  "astroquery>=0.4.11",
  "lightkurve>=2.5",
  "scipy>=1.17.1",
  "batman-package>=2.4",
  "transitleastsquares>=1.32",
  "wotan>=1.10",
  "triceratops>=1.0.20",
  "arviz>=0.17,<0.18",
  "xarray-einstats<0.8",
]
ml = [
  "h5py>=3.11",
  "joblib>=1.4",
  "onnxruntime>=1.18",
  "pandas>=2.2",
  "scikit-learn==1.7.2",
  "tensorflow>=2.16",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["backend/orbitlab"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
